--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ header {
     padding: 20px 0;
     text-align: center;
 }
+.title h1 {
+    font-size: 2.5rem; /* Adjust as needed */
+    margin: 0;
+    color: whitesmoke;
+}
+
+.title p {
+    font-size: 1rem; /* Smaller font size for subtext */
+    margin: 0;
+    color: whitesmoke;
+    text-align: center; /* Align text with the title */
+}
 
 header nav ul {
     list-style-type: none;
